Elk Wk jaar + 1ste tot 4de plaats laten zien

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<h1>Gebruikers</h1>
+<ul>
+    <li *ngFor="let year of year">
+        {{year.year}}<br>{{year.Country}}<br>{{year.Winner}}<br>{{year.Runners_Up}}<br>{{year.Third}}<br>{{year.Fourth}}
+    </li>
+</ul>
