--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,3 +2,9 @@
     margin: 0;
     padding: 0;
 }
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
