--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
 }
-ul {
-    list-style: none;
+section{
     display: flex;
     justify-content: space-around;
     text-align: center;
