--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,6 @@
 
 <section>
     <article *ngFor="let year of year">
-            <h4>Jaar:</h4>{{year.year}}<h4>Land:</h4>{{year.Country}}<h4>First:</h4>{{year.Winner}}<h4>Second:</h4>{{year.Runners_Up}}<h4>Third:</h4>{{year.Third}}<h4>Fourth:</h4>{{year.Fourth}}
+            <span class="bold">Jaar:</span>{{year.year}}<span class="bold">Land:</span>{{year.Country}}<span class="bold">First:</span>{{year.Winner}}<span class="bold">Second:</span>{{year.Runners_Up}}<span class="bold">Third:</span>{{year.Third}}<span class="bold">Fourth:</span>{{year.Fourth}}
     </article>
 </section>
