--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,7 +3,5 @@
     padding: 0;
 }
 section{
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
+    display: grid;
 }
