--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 section{
@@ -12,7 +13,7 @@ section{
 
     .card{
         background-color: grey;
-        margin: 10px;
+        margin: 2px;
         width: 9vw;
         border-radius: 10px;
     }
