--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <h1>Alle Wk jaren</h1>
 
-<section>
-  <article class="card" *ngFor="let year of year">
-    <span class="bold">Jaar:</span>{{year.year}}<br><span 
-          class="bold">Land:</span>{{year.Country}}<br><span
-          class="bold">First:</span>{{year.Winner}}<br><span 
-          class="bold">Second:</span>{{year.Runners_Up}}<br><span
-          class="bold">Third:</span>{{year.Third}}<br><span 
-          class="bold">Fourth:</span>{{year.Fourth}}
+<section class="slideshow-container">
+  <article class="card mySlides fade" *ngFor="let year of year">
+    <span class="bold">Jaar:</span>{{year.year}}<br>
+    <span class="bold">Land:</span>{{year.Country}}<br>
+    <span class="bold">First:</span>{{year.Winner}}<br>
+    <span class="bold">Second:</span>{{year.Runners_Up}}<br>
+    <span class="bold">Third:</span>{{year.Third}}<br>
+    <span class="bold">Fourth:</span>{{year.Fourth}}
   </article>
 </section>
