--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <h1>Alle Wk jaren</h1>
 
-<section class="slideshow-container">
-  <article class="card mySlides fade" *ngFor="let year of year">
+<section class="container">
+  <article class="card" *ngFor="let year of year">
     <span class="bold">Jaar:</span>{{year.year}}<br>
     <span class="bold">Land:</span>{{year.Country}}<br>
     <span class="bold">First:</span>{{year.Winner}}<br>
