--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,11 +8,12 @@
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     justify-content: center;
+    width: 100%;
+    color: rgba(255, 255, 255, 0.876);
 
     .card{
-        background-color: green;
+        background-color: rgb(15, 15, 150);
         margin: 10px;
-        width: 8.5vw;
         border-radius: 10px;
     }
 
