--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,6 +15,7 @@
         background-color: rgb(15, 15, 150);
         margin: 10px;
         border-radius: 10px;
+        width: 8.5vw;
     }
 
     .bold{
