--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,9 @@ main{
     grid-template-columns: 100px 1fr;
     grid-template-rows: 1fr;
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+
 }
 app-nav{
     background-color: #5e5d5a;
