--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,9 +5,8 @@
 }
 
 .container{
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
 
     .card{
         background-color: green;
@@ -21,3 +20,4 @@
         margin-left: 5px;
     }
 }
+
