--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
         <li><a routerLink=""><span class="">Home</span></a></li>
-        <li><a routerLink=""><span class="">Alle WK's</span></a></li>
+        <li><a routerLink="leaderboard"><span class="">leaderboard</span></a></li>
     </ul>
 </nav>
