--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 <section class="container">
   <article class="card" *ngFor="let year of year">
     
-    <a routerLink="laatste16:{{year.year}}"><span class="bold">Jaar:</span>{{year.year}}</a><br>
+    <a routerLink="laatste16/:{{year.year}}"><span class="bold">Jaar:</span>{{year.year}}</a><br>
     <span class="bold">Land:</span>{{year.Country}}<br>
     <span class="bold">First:</span>{{year.Winner}}<br>
     <span class="bold">Second:</span>{{year.Runners_Up}}<br>
@@ -11,9 +11,7 @@
     <span class="bold">Fourth:</span>{{year.Fourth}}
   </article>
 </section>
-  <section class="laatste">
-    <router-outlet name="laatste16"></router-outlet>
-  </section>
+
  
 
 </div>
