--- a/src/app/laatste16/laatste16.component.html
+++ b/src/app/laatste16/laatste16.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let match of match">
+<!-- dit werkt niet beetje jammer
+kan niet laten zien -->
+<div *ngFor="let match of year">
 
 </div>
