--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,12 @@ main{
     display: grid;
     grid-template-columns: 100px 1fr;
     grid-template-rows: 1fr;
-    height: 100vh;
-    width: 100vw;
-
+    height: 100&;
+    height: 100%;
 
 }
 app-nav{
     background-color: #5e5d5a;
+    display: fixed;
+    height: 100%;
 }
