--- a/src/app/laatste16/laatste16.component.scss
+++ b/src/app/laatste16/laatste16.component.scss
@@ -5,9 +5,30 @@
 .container{
     width: 100%;
     height: 100%;
-    background-color: grey;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px;
 }
 .card{
-    
+    color: white;
+    width: 600px;
     background-color: blue;
+    border: solid 2px black;
+    border-radius: 2rem;
+    box-sizing: border-box;
+    padding: 20px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    flex-wrap: wrap;
+
+}
+
+.card a:link{
+    text-decoration: none;
+    color: rgb(0, 191, 255);
+}
+.card a:hover {
+    color: rgb(0, 51, 255);
 }
