--- a/src/app/matchinfo/matchinfo.component.html
+++ b/src/app/matchinfo/matchinfo.component.html
@@ -1,5 +1,18 @@
-<p>matchinfo works!</p>
+
 <div *ngFor="let matchinfo of match">
 
-    {{matchinfo.City}}
+    <br>
+    location:{{matchinfo.City}}
+    <br>
+    year:{{matchinfo.year}}
+    
+    <br>
+    {{matchinfo.Away_Team}}
+    <br>
+    {{matchinfo.Away_Team_Name}}
+    {{matchinfo.Away_Team_Goals}}
+    <br>
+    {{matchinfo.Home_Team_Name}}
+    {{matchinfo.Home_Team_Goals}}
+
    </div>
