--- a/src/app/matchinfo/matchinfo.component.html
+++ b/src/app/matchinfo/matchinfo.component.html
@@ -10,9 +10,11 @@
     {{matchinfo.Away_Team}}
     <br>
     {{matchinfo.Away_Team_Name}}
+    {{matchinfo.Away_Team_Initials}}
     {{matchinfo.Away_Team_Goals}}
-    <br>
-    {{matchinfo.Home_Team_Name}}
+    
     {{matchinfo.Home_Team_Goals}}
+    {{matchinfo.Home_Team_Initials}}
+    {{matchinfo.Home_Team_Name}}
 
    </div>
