--- a/src/app/laatste16/laatste16.component.scss
+++ b/src/app/laatste16/laatste16.component.scss
@@ -7,8 +7,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin: 20px;
+    gap: 10px;
+    margin: 10px;
 }
 .card{
     color: white;
@@ -17,11 +17,12 @@
     border: solid 2px black;
     border-radius: 2rem;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 10px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     flex-wrap: wrap;
+    font-size: 1rem;
 
 }
 
