--- a/src/app/laatste16/laatste16.component.scss
+++ b/src/app/laatste16/laatste16.component.scss
@@ -3,16 +3,15 @@
     padding: 0;
 }
 .container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: 10px;
     margin: 10px;
 }
 .card{
     color: white;
-    width: 600px;
+    width: auto;
     background-color: blue;
     border: solid 2px black;
     border-radius: 2rem;
