--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,7 +10,7 @@
     grid-template-rows: 1fr;
 
     .card{
-        background-color: grey;
+        background-color: blue;
         margin: 10px;
         width: 8.5vw;
         border-radius: 10px;
