--- a/src/app/matchinfo/matchinfo.component.html
+++ b/src/app/matchinfo/matchinfo.component.html
@@ -32,7 +32,7 @@
 <div class="team">
     <div  *ngFor="let p of players; index as i;">
         <div *ngIf="i % 2 == 0">
-         {{p.number}} {{p.name}} {{p.country}} 
+         {{p.number}} {{p.name}}  
         </div>
     </div>
 </div>
