--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,16 +5,38 @@
 }
 
 .container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+
 
     .card{
-        background-color: blue;
+        background-color: #1163fc;
         margin: 10px;
-        width: 8.5vw;
+        padding: 10px;
+        min-width: 150px;
         border-radius: 10px;
+        font-family: Arial, Helvetica, sans-serif;
+
+        p{
+            
+
+            a{
+                color: white;
+            }
+            a:hover{
+                color: blue;
+                text-decoration: underline;
+            }
+
+
+
+
+        }
     }
+
 
     .bold{
         font-weight: bold;
