--- a/src/app/matchinfo/matchinfo.component.scss
+++ b/src/app/matchinfo/matchinfo.component.scss
@@ -8,9 +8,8 @@
     border: solid black 3px;
     border-radius: 10px;
     padding: 10px;
-    background-color: blue;
-    color: white;
-    font-size: 1rem;
+    background-color: #1163fc;
+    font-size: 1.2rem;
 }
 .spelers{
     display: flex;
