--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,6 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 ul {
@@ -15,4 +17,9 @@ ul {
 a {
     color:white;
     text-decoration: none;
+}
+a:hover{
+    color: blue;
+    text-decoration: underline;
+
 }
